[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
awc = "3.0.0"
futures = "0.3.21"
serde = "1.0.139"
serde_json = "1.0.82"
tokio = { version = "1.21.2", features = ["full"] }
